--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
+[dev-dependencies]
+criterion = "0.3.5"
+# rust-tle = { git = "https://github.com/pbrandt1/rust-tle", package = "tle" }
+tle-parser = "0.1.3"
+
+[[bench]]
+name = "compare"
+harness = false
