--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+nom = { version = "7.1.0", optional = true }
+thiserror = "1.0.30"
 
 [dev-dependencies]
 criterion = "0.3.5"
@@ -18,3 +20,8 @@ tle-parser = "0.1.3"
 [[bench]]
 name = "compare"
 harness = false
+
+# docs.rs specific configuration
+[package.metadata.docs.rs]
+all-features = true
+# rustdoc-args = ["--cfg", "docsrs"]
