Add package metadata

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "tletools"
 version = "0.1.0"
 description = "Library to work with two-line element set files"
 authors = ["Federico Stra <stra.federico@gmail.com>"]
+license = "MIT"
+repository = "https://github.com/FedericoStra/tletools-rs"
+categories = ["aerospace", "aerospace::space-protocols", "parser-implementations", "science"]
+keywords = ["tle"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
