--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ edition = "2021"
 [dependencies]
 nom = { version = "7.1.0", optional = true, default-features = false }
 thiserror = { version = "1.0.30", optional = true }
-num-traits = "0.2"
+num-traits = { version = "0.2", default-features = false }
 cfg-if = "1.0"
 
 [dev-dependencies]
